new setting ui design

--- a/frontend/javascripts/app/views/home.html
+++ b/frontend/javascripts/app/views/home.html
@@ -29,7 +29,7 @@
         <button class="home-page-new-exp-button H2" ng-click="HomeCtrl.newTestKit()">RUN A TEST KIT</button>
       </div>
       <div class="home-page-go-settings-container">
-        <button class="home-page-small-button SH" ui-sref="settings.root">SETTINGS</button>
+        <button class="home-page-small-button SH" ng-click="HomeCtrl.onSetting()">SETTINGS</button>
       </div>
       <div class="home-page-logout-container">
         <button class="home-page-small-button SH" logout>SIGN OUT</button>
@@ -77,46 +77,6 @@
                   <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at && exp.experiment.id==current_experiment_id && machine_state != 'idle'">IN PROGRESS&nbsp;<ellipsis-animated></ellipsis-animated></span>
                 </div>
               </a>
-<!--               <a class="experiment-links" ng-if="!exp.experiment.started_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.set-wells({id: exp.experiment.id})">
-                <div class="home-page-exp-name B1B">
-                  {{exp.experiment.name}}
-                </div>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && !exp.experiment.time_valid">Created, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a>
-              <a class="experiment-links" ng-if="exp.experiment.started_at && exp.experiment.type !== 'test_kit'" href="/#/experiments/{{exp.experiment.id}}/run-experiment?chart=amplification">
-                <div class="home-page-exp-name B1B">
-                  {{exp.experiment.name}}
-                </div>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && !exp.experiment.time_valid">Created, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a>
-              <a class="experiment-links" ng-if="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.experiment-result({id: exp.experiment.id})">
-                <div class="home-page-exp-name B1B">
-                  {{exp.experiment.name}}
-                </div>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && !exp.experiment.time_valid">Created, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a>
-              <a class="experiment-links" ng-if="exp.experiment.started_at && !exp.experiment.completed_at && exp.experiment.type === 'test_kit'" ui-sref="pika_test.experiment-running({id: exp.experiment.id})">
-                <div class="home-page-exp-name B1B">
-                  {{exp.experiment.name}}
-                </div>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && exp.experiment.time_valid">Created {{exp.experiment.created_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="!exp.experiment.started_at && !exp.experiment.time_valid">Created, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && exp.experiment.time_valid">Run {{exp.experiment.started_at | amCalendar}}, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && exp.experiment.completed_at && !exp.experiment.time_valid">Run previously, #{{exp.experiment.id}}</span>
-                <span class="home-page-exp-created-at B2" ng-show="exp.experiment.started_at && !exp.experiment.completed_at">IN PROGRESS&nbsp;<ellipsis-animated><ellipsis-animated/></span>
-              </a> -->
             </div>
             <delete-mode mode="deleteMode" experiment="exp.experiment" delete-exp="HomeCtrl.deleteExperiment(exp)"></delete-mode>
           </div>
