--- a/frontend/stylesheets/chai-template/variables.scss
+++ b/frontend/stylesheets/chai-template/variables.scss
@@ -5,6 +5,8 @@ $red: red;
 $gray: #777;
 $dark-gray: #333;
 
+$blue: #00AEEF;
+
 // Set Wells Page
 $section-border-color: rgba(0,0,0,0.16);
 $cell-border-color: #707070;
