--- a/frontend/stylesheets/chai-template/fonts.scss
+++ b/frontend/stylesheets/chai-template/fonts.scss
@@ -131,6 +131,12 @@
     line-height: 12px;
   }
 
+  .CG1-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 10px;
+    line-height: 12px;
+  }
+
   .CG2{
     font-family: 'DINOT--Regular', Arial, sans-serif;
     font-size: 9px;
@@ -157,6 +163,12 @@
 
   .CX3-M{
     font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .CX3{
+    font-family: 'DINOT--Regular', Arial, sans-serif;
     font-size: 20px;
     line-height: 24px;
   }
