--- a/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-9.html
+++ b/frontend/javascripts/dynexp/optical_test_dual_channel/views/page-9.html
@@ -59,7 +59,7 @@
   </div>
 
   <div class="text-center" ng-show="!analyzing">
-    <a href="/#/settings/" class="button">CONTINUE</a>
+    <a href="/#/home" class="button">CONTINUE</a>
   </div>
 
 </div>
