--- a/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
+++ b/frontend/javascripts/dynexp/optical_test_single_channel/views/analyze.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="text-center" ng-show="!analyzing">
-    <a ui-sref="settings.root" class="button">CONTINUE</a>
+    <a ui-sref="home" class="button">CONTINUE</a>
   </div>
 
 </div>
