--- a/frontend/javascripts/dynexp/optical_cal/views/step-6.html
+++ b/frontend/javascripts/dynexp/optical_cal/views/step-6.html
@@ -12,7 +12,7 @@
       Remember to re-run the calibration should you adjust the lid height or make of PCR tubes.
     </p>
 
-    <a ui-sref="settings.root" class="button">OKAY</a>
+    <a ui-sref="home" class="button">OKAY</a>
   </div>
 </div>
 
@@ -37,6 +37,6 @@
       {{result.error}}
     </p>
 
-    <a ui-sref="settings.root" class="button">OKAY</a>
+    <a ui-sref="home" class="button">OKAY</a>
   </div>
 </div>
