--- a/frontend/javascripts/dynexp/pika_test/views/analyze.html
+++ b/frontend/javascripts/dynexp/pika_test/views/analyze.html
@@ -68,7 +68,7 @@
   </h3>
 
   <div class="text-center" ng-if="!analyzing">
-    <a href="/#/settings/" class="button">OKAY</a>
+    <a href="/#/home/" class="button">OKAY</a>
   </div>
 
 </div>
