--- a/frontend/javascripts/app/views/settings/v2/network-panel.html
+++ b/frontend/javascripts/app/views/settings/v2/network-panel.html
@@ -18,8 +18,10 @@
       <li ng-repeat="wifiNetwork in wifiNetworks" ng-click="onSelectNetwork(wifiNetwork.ssid)" ng-class="{selected: selectedWifiNow.ssid == wifiNetwork.ssid, active: isConnectedNetwork(wifiNetwork.ssid)}">
         <wifi-check-symbol current-network="currentWifiSettings" ssid="{{wifiNetwork.ssid}}"></wifi-check-symbol>
         <span>{{wifiNetwork.ssid | truncate:20}}</span>
-        <wifi-lock encryption="{{wifiNetwork.encryption}}" ssid="{{wifiNetwork.ssid | spaceToUnderscore}}"></wifi-lock>
-        <wifi-signal ssid="{{wifiNetwork.ssid | spaceToUnderscore}}" quality="{{wifiNetwork.quality}}"></wifi-signal>
+        <div class="wifi-props">
+          <wifi-signal ssid="{{wifiNetwork.ssid | spaceToUnderscore}}" quality="{{wifiNetwork.quality}}"></wifi-signal>          
+          <wifi-lock encryption="{{wifiNetwork.encryption}}" ssid="{{wifiNetwork.ssid | spaceToUnderscore}}"></wifi-lock>
+        </div>
       </li>
     </ul>
   </div>
