--- a/frontend/stylesheets/chai-template/app/modal-settings.scss
+++ b/frontend/stylesheets/chai-template/app/modal-settings.scss
@@ -332,6 +332,7 @@
           .wifi-switch{
             display: inline-block;
             width: 40px;
+            vertical-align: middle;
           }
 
           .lan-switch{
@@ -404,15 +405,25 @@
           overflow: auto;
           li{
             display: flex;
-            width: calc(100% - 35px);
+            width: calc(100% - 17px);
             margin-left: auto;
-            padding: 3px 10px 3px 5px;
+            padding: 0;
+            padding-left: 5px;
             margin-bottom: 10px;
             cursor: pointer;
             justify-content: space-between;
+            align-items: center;
+
+            .wifi-info{
+              width: calc(100% - 13px);
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding: 3px 10px 3px 5px;
+            }
 
             span{
-              width: calc(100% - 40px);
+              width: calc(100% - 55px);
             }
 
             .wifi-props{
@@ -423,32 +434,15 @@
             }
 
             .check-symbol{
-              margin-right: 5px;
-              top: 5px;
-            }
-
-            &.active{
-              width: calc(100% - 17px);
+              margin-right: 2px;
+              top: 2px;
             }
 
             &.selected, &:hover{
-              background: #00BAFF;
-              border-radius: 2px;
-              color: #fff;
-              .check-symbol{
-                background: transparent;
-                border-color: transparent;
-                &:after{
-                  border-color: transparent;
-                }
-              }
-
-              .check-symbol.active{
-                background: transparent;
-                border-color: #fff;
-                &:after{
-                  border-color: #fff;
-                }
+              .wifi-info{                
+                background: #00BAFF;
+                border-radius: 2px;
+                color: #fff;
               }
 
               .lock-rect{
@@ -582,6 +576,7 @@
       display: inline-block;
       margin-left: 10px;
       margin-bottom: 0;
+      vertical-align: baseline;
     }
     span.set-auto {
       color: $blue;
@@ -660,20 +655,20 @@
   }
 
   .check-symbol{
-    width: 13px;
-    height: 13px;
+    width: 11px;
+    height: 11px;
     display: inline-block;
     background: transparent;
     border-radius: 50%;
     vertical-align: text-top;
     position: relative;
     border: 1px solid transparent;
-    display: none;
+    opacity: 0;
 
     &.active{      
       background: #8DC63F;
       border-color: #8DC63F;
-      display: inline-block;
+      opacity: 1;
     }
 
 
@@ -686,8 +681,8 @@
       border: 1px solid #fff;
       border-right: none;
       border-top: none;
-      width: 7px;
-      height: 4px;
+      width: 6px;
+      height: 3px;
       transform: rotate(-45deg);
     }
 
