--- a/frontend/stylesheets/chai-template/app/modal-settings.scss
+++ b/frontend/stylesheets/chai-template/app/modal-settings.scss
@@ -333,6 +333,10 @@
             display: inline-block;
             width: 40px;
             vertical-align: middle;
+
+            .check-symbol{
+              margin-left: 2px;
+            }
           }
 
           .lan-switch{
@@ -435,7 +439,7 @@
 
             .check-symbol{
               margin-right: 2px;
-              top: 2px;
+              top: 1px;
             }
 
             &.selected, &:hover{
@@ -662,33 +666,19 @@
     border-radius: 50%;
     vertical-align: text-top;
     position: relative;
-    border: 1px solid transparent;
     opacity: 0;
+    margin-top: 2px;
 
     &.active{      
-      background: #8DC63F;
-      border-color: #8DC63F;
       opacity: 1;
     }
 
-
-    &:after{
-      content: "";
-      display: block;
+    img{
+      width: 100%;
+      height: 100%;
       position: absolute;
-      top: 3px;
-      left: 2px;
-      border: 1px solid #fff;
-      border-right: none;
-      border-top: none;
-      width: 6px;
-      height: 3px;
-      transform: rotate(-45deg);
-    }
-
-    &.disabled{
-      background: transparent;
-      border: 1px solid transparent;
+      top: 0;
+      left: 0;
     }
   }
 }
