updated long exp name

--- a/frontend/javascripts/app/views/directives/v2/header-exp-status.html
+++ b/frontend/javascripts/app/views/directives/v2/header-exp-status.html
@@ -3,7 +3,7 @@
   <div class="header-bar" ng-if="isLoading()">
     <div class="left-content">
       <div class="menu" ng-transclude></div>
-      <div class="exp-name CH1">LOADING <ellipsis-animated></ellipsis-animated></div>
+      <div class="exp-name CH1">Loading <ellipsis-animated></ellipsis-animated></div>
     </div>      
   </div>
   <div ng-if="!isLoading()" class="header-bar" ng-class="{'in-progress': state && state !== 'idle' && isCurrentExp, 'complete': experiment && ((experiment.completed_at && !(state !== 'idle' && isCurrentExp)) || (experiment.started_at && !(state !== 'idle' && isCurrentExp)))}" ng-style="backgroundStyle">
@@ -45,15 +45,15 @@
 
     <!-- experiment completed successfully -->
     <div class="right-content CB1-M" ng-if="experiment.completed_at && !(state !== 'idle' && isCurrentExp) && (dataAnalysis || !enterState)">
-      <span ng-if="experiment.completion_status === 'success'">COMPLETED</span>
+      <span ng-if="experiment.completion_status === 'success'">Completed</span>
       <span ng-if="experiment.completion_status !== 'success'">
-        <span class="failed CB1-M mr-10">FAILED</span>
+        <span class="failed CB1-M mr-10">Failed</span>
         <span ng-if="experiment.completion_status === 'aborted'">
-          USER CANCELLED
+          User cancelled
           <span ng-if="experiment.time_valid" >{{experiment.completed_at|date:'MMM. dd yyyy, hh:mm:ss'}}</span>
         </span>
         <span ng-if="experiment.completion_status !== 'aborted'">
-          AN ERROR OCCURED
+          An error occured
           <span class="CB1-M cursor-pointer" ng-click="viewError()">View Details</span>
         </span>
       </span>
@@ -62,9 +62,9 @@
     <!-- experiment has been started and not completed -->
     <div class="right-content CB1-M" ng-if="experiment && experiment.started_at && !experiment.completed_at && 
             !isStarted && !(state !== 'idle' && isCurrentExp) && (dataAnalysis || !enterState)">
-      <span class="failed CB1-M">FAILED</span>
-      <span ng-if="experiment.completion_status === 'aborted'">USER CANCELLED</span>
-      <span ng-if="experiment.completion_status !== 'aborted'">AN ERROR OCCURED</span>
+      <span class="failed CB1-M">Failed</span>
+      <span ng-if="experiment.completion_status === 'aborted'">User cancelled</span>
+      <span ng-if="experiment.completion_status !== 'aborted'">An error occured</span>
     </div>
   </div>
 </div>
