update view detail popup

--- a/frontend/javascripts/app/views/directives/error-modal.html
+++ b/frontend/javascripts/app/views/directives/error-modal.html
@@ -18,11 +18,9 @@
 -->
 <div class="modal-error">
   <div class="close-wrapper">
-    <div class="close" ng-click="$dismiss()">&times;</div>
+    <div class="close" ng-click="$dismiss()"><img src="/images/x_k_white.svg"></div>
   </div>
-  <p>
-    <strong class="SHR">{{title}}</strong>
-  </p>
-  <p class="SHR">{{message}}</p>
-  <p class="SHR">{{date | date:'MMM. dd yyyy, hh:mm:ss'}}</p>
+  <p class="CB2-M">{{title}}</p>
+  <p class="CB2">{{message}}</p>
+  <p class="CB2">{{date | date:'MMM. dd yyyy, hh:mm:ss'}}</p>
 </div>
