--- a/frontend/javascripts/app/views/directives/v2/header-exp-status.html
+++ b/frontend/javascripts/app/views/directives/v2/header-exp-status.html
@@ -54,8 +54,8 @@
         </span>
         <span ng-if="experiment.completion_status !== 'aborted'">
           An error occured
-          <span class="CB1-M cursor-pointer" ng-click="viewError()">View Details</span>
         </span>
+        <button class="CB1-M button-header ml-10" ng-click="viewError()">View Details</button>
       </span>
     </div>
 
