--- a/frontend/javascripts/app/views/directives/v2/exp-name-editor-left-menu.html
+++ b/frontend/javascripts/app/views/directives/v2/exp-name-editor-left-menu.html
@@ -9,7 +9,7 @@
     <div class="exp-name-container">
       <p class="exp-name CH1" ng-class="{'hide-elem': editExpNameMode}" id="exp_name_plat">{{experiment.name}}</p>
       <textarea class="exp-name CH1" required ng-model="experiment.name" ng-show="editExpNameMode"
-        focus-on="editExpNameMode" id="exp_name_field" rows="3" ng-change="adjustTextHeight()"></textarea>
+        focus-on="editExpNameMode" id="exp_name_field" rows="3" ng-change="adjustTextHeight()" maxlength="255"></textarea>
     </div>
     <div ng-show="errors">
       <span class="help-block CB2-M">
