--- a/frontend/stylesheets/chai-template/directives/header-exp-status.scss
+++ b/frontend/stylesheets/chai-template/directives/header-exp-status.scss
@@ -2,6 +2,37 @@
 
   // Header Exp Status Style
 .chai-mode{
+  .modal-error-window{
+    .modal-dialog{
+      position: absolute;
+      right: 0;
+      top: 60px;
+      width: 360px;
+      margin: 0;
+
+      .modal-content{
+        border-color: #333;
+        border-radius: 0 0 2px 2px;
+        padding: 20px 20px 10px;
+      }
+    }
+
+    .close-wrapper .close{
+      float: right;
+      color: #fff;
+      margin-right: -10px;
+      margin-top: -10px;
+      font-weight: lighter;
+      width: 12px;
+      height: 12px;
+      display: block;
+
+      img{
+        display: block;
+      }
+    }
+  }
+
   .header-exp-status{
     &.standard-exp{
       .header-bar{
@@ -51,13 +82,13 @@
         opacity: 0;
 
         .button-header{
-          background: $dark-gray;
+          background: $black;
           border: 1px solid;
           border-radius: 2px;
-          padding: 3px 0 5px;
-          width: 175px;
+          padding: 3px 10px 5px;
           text-align: center;
           cursor: pointer;
+          outline: none;
         }
 
         .button-he{
