--- a/frontend/stylesheets/chai-template/app/modal-settings.scss
+++ b/frontend/stylesheets/chai-template/app/modal-settings.scss
@@ -514,6 +514,20 @@
         }
       }
 
+      .maintenance{
+        .row{
+          .col-sm-6{
+            &:nth-child(1),
+            &:nth-child(2){
+              .box-frame{
+                height: 230px;
+              }
+            }
+          }
+        }
+
+      }
+
       .system{
         span.export-text{
           display: inline-block;
