fix exporting button bug in side bar

--- a/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
+++ b/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
@@ -419,6 +419,13 @@ $sidemenu_width_close: 0;
           span{
             width: 100%;
             display: block;
+
+            &.ellipsis_animated-inner{
+              display: inline;
+              span{
+                display: inline;
+              }
+            }
           }
         }
 
